fix css for scrollbar & node list (#770)
* fix css for scrollbar

* add cursor: pointer to node list

--- a/src/app/cluster/cluster-details/node-list/node-list.component.scss
+++ b/src/app/cluster/cluster-details/node-list/node-list.component.scss
@@ -94,3 +94,11 @@ i.fa-info-circle {
 .disabled {
   color: $disabled-button-color
 }
+
+.accordion {
+  cursor: pointer;
+
+  .node-details-wrapper {
+    cursor: default;
+  } 
+}
